--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
       Thanks for subscribing!
     </h1>
     <p>
-      A confirmation email has been sent to
-      <strong id="email-address"> ash@loremcompany.com</strong>.
+      A confirmation email has been sent to <span id="email-address"></span>.
       Please open it and click the button inside to confirm your subscription.
     </p>
     <button id="Dismiss">
